--- a/index.html
+++ b/index.html
@@ -32,47 +32,47 @@
 </head>
 
 <body style="background-color: #DCDBDB;">
-
-
 	<div class="to-do-list-box">
 		<div class="container">
 			<div class="headings-box">
 				<h1>To-Do List App</h1>
 				<p>your list of tasks for today</p>
 			</div>
+
 			<div id="tasks-body">
-				<div id="tasks">
-					
-				</div>
+				<div id="tasks"></div>
 			</div>
 
-			<div class="edit-field-heading">
-					Adding the task
-				</div>
-			<div class="edit-field">
-				
+			<div class="edit-field-heading">Adding the task</div>
 
+			<div class="edit-field">
 				<div class="edit-field-body">
 					<div class="row">
 						<textarea class="col-lg-12" id="task-description"></textarea>
+
 						<div class="col-lg-4 col-md-5 col-sm-12">
 							<label class="input-file">
 								<input type="file" id="selectFiles" value="Import"/>
 								<span>Choose the file</span>
  							</label>
 						</div>
+
 						<div class="col-lg-3 col-md-3 col-sm-12">
 							<button class="btn btn-success" id="add-task-btn">Add the task</button>
 						</div>
+
 						<div class="col-lg-3 col-md-4 col-sm-12">
 							<button class="btn btn-info" id="import">Show TO-DO List</button>
 						</div>
+
 						<div class="col-lg-2 col-md-4 col-sm-12">
 							<button class="btn btn-primary" id="download">Download</button>
 						</div>
+
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
 
